--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,6 @@ jobs:
       - run: flutter analyze .
 
       # Run widget tests for our flutter project.
-      - run: flutter test
-      # - run: |
-      # cd example && flutter test && cd -
+      # - run: flutter test
+      - run: |
+      cd example && flutter test && cd -
