--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
   "markdown.extension.toc.omittedFromToc": {
     "README.md": [
-      "## Table of Contents",
-      "### **Note**"
+      "## Table of Contents"
     ]
   }
 }
