--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "markdown.extension.toc.omittedFromToc": {
     "README.md": [
-      "## Table of Contents"
+      // "# Flutter Mediator Persistence",
+      "## Table of Contents",
+      "### **Note**",
     ]
   }
 }
