--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,14 +5,15 @@ homepage: https://github.com/rob333/flutter_mediator_persistence
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
-  flutter: ">=2.3.0"
+  flutter: ">=2.8.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^2.0.11
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
+  flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
 
