--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,8 +5,12 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [main]
+    paths-ignore:
+      - "**.md"
   pull_request:
     branches: [main]
+    paths-ignore:
+      - "**.md"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,14 +29,16 @@ jobs:
 
     steps:
       # Setup Java environment in order to build the Android app.
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
         with:
-          java-version: "12.x"
-          # java-version: ${{ matrix.java }}
+          fetch-depth: 2
+      # - uses: actions/setup-java@v1
+      #   with:
+      #     java-version: "12.x"
+      #     # java-version: ${{ matrix.java }}
 
       # Setup the flutter environment.
-      - uses: subosito/flutter-action@v1
+      - uses: subosito/flutter-action@v2
         with:
           channel: beta
           # channel: ${{ matrix.channel }}
@@ -53,7 +59,7 @@ jobs:
           cd example && flutter pub get && cd -
 
       # Check for any formatting issues in the code.
-      - run: flutter format --set-exit-if-changed .
+      - run: dart format --set-exit-if-changed .
 
       # Statically analyze the Dart code for any errors.
       - run: flutter analyze .
